config-root/namespaces/jx/jx-pipelines-visualizer/jx-pipelines-visualizer-ingress.yaml
# Source: jx-pipelines-visualizer/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jx-pipelines-visualizer
  labels:
    app.kubernetes.io/name: jx-pipelines-visualizer
    app.kubernetes.io/instance: "jx-pipelines-visualizer"
    helm.sh/chart: jx-pipelines-visualizer-0.0.38
    app.kubernetes.io/version: "0.0.38"
    app.kubernetes.io/managed-by: "Helm"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx
spec:
  rules:
    - host: dashboard-jx.104.199.18.24.nip.io
      http:
        paths:
          - backend:
              serviceName: jx-pipelines-visualizer
              servicePort: http
